--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "React libraries ts template",
 	"source": "src/index.tsx",
 	"main": "dist/index.js",
-	"module": "dist/index.mjs",
+	"module": "dist/index.m.js",
+	"esmodule": "dist/index.modern.js",
 	"unpkg": "dist/index.umd.js",
 	"types": "dist/index.d.ts",
 	"amdName": "index",
